--- a/scheduler/roles/cluster_validation/tasks/fetch_omnia_inputs.yml
+++ b/scheduler/roles/cluster_validation/tasks/fetch_omnia_inputs.yml
@@ -43,6 +43,7 @@
     ansible-vault decrypt {{ role_path }}/../../../input/{{ config_filename }}
     --vault-password-file {{ role_path }}/../../../input/{{ config_vaultname }}
   when: "'$ANSIBLE_VAULT;' in config_content.stdout"
+  changed_when: true
 
 - name: Include variable file omnia_config.yml
   block:
