--- a/scheduler/roles/common/tasks/prepare_rhel_nodes.yml
+++ b/scheduler/roles/common/tasks/prepare_rhel_nodes.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -16,14 +16,14 @@
 # Prepare RHEL and Rocky nodes
 
 - name: Add epel-release repo
-  package:
+  ansible.builtin.package:
     name: epel-release
     state: present
   tags: install
   when: os_supported_redhat not in compute_os
 
 - name: Add elrepo GPG key
-  rpm_key:
+  ansible.builtin.rpm_key:
     state: present
     key: "{{ elrepo_gpg_key_url }}"
   register: elrepo_gpg_key
@@ -34,7 +34,7 @@
   when: os_supported_redhat not in compute_os
 
 - name: Add elrepo (nvidia kmod drivers)
-  package:
+  ansible.builtin.package:
     name: "{{ elrepo_rpm_url }}"
     state: present
   register: elrepo
@@ -45,38 +45,38 @@
   when: os_supported_redhat not in compute_os
 
 - name: Permanently Disable swap
-  mount:
+  ansible.posix.mount:
     name: "swap"
     fstype: swap
     state: absent
 
 - name: Disable selinux
-  selinux:
+  ansible.posix.selinux:
     state: disabled
   tags: install
 
 - name: Install common packages
-  package:
+  ansible.builtin.package:
     name: "{{ common_packages }}"
     state: present
   when: os_supported_centos not in compute_os
   tags: install
 
 - name: Install common packages for CentOS 7.9
-  package:
+  ansible.builtin.package:
     name: "{{ common_packages_centos }}"
     state: present
   when: os_supported_centos in compute_os
 
 - name: Install common packages for non leap and non RHEL OS
-  package:
+  ansible.builtin.package:
     name: "{{ common_packages_non_leap }}"
     state: present
   tags: install
   when: os_supported_redhat not in compute_os
 
 - name: Install common packages for RHEL
-  package:
+  ansible.builtin.package:
     name: "{{ common_packages_rhel }}"
     state: present
   tags: install
