--- a/scheduler/roles/common/vars/main.yml
+++ b/scheduler/roles/common/vars/main.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -23,7 +23,7 @@ nvidia_repo: https://download.nvidia.com/opensuse/leap/15.3/
 amd_gpu_dest: /etc/modprobe.d/10-unsupported-modules.conf
 gpg_key_amd: 'https://repo.radeon.com/rocm/rocm.gpg.key'
 amd_repo: 'https://repo.radeon.com/rocm/zyp/zypper/'
-conf_file_mode: 0644
+conf_file_mode: "0644"
 os_supported_leap: "leap"
 os_supported_leap_version: "15.3"
 
@@ -59,7 +59,7 @@ common_packages_rhel:
   - yum-plugin-versionlock
   - network-scripts
 elrepo_gpg_key_url: https://www.elrepo.org/RPM-GPG-KEY-elrepo.org
-elrepo_rpm_url: "https://www.elrepo.org/elrepo-release-{{ ansible_facts['distribution_major_version'] }}.el{{ ansible_facts['distribution_major_version'] }}.elrepo.noarch.rpm" 
+elrepo_rpm_url: "https://www.elrepo.org/elrepo-release-{{ ansible_facts['distribution_major_version'] }}.el{{ ansible_facts['distribution_major_version'] }}.elrepo.noarch.rpm" # noqa: yaml[line-length]
 os_name: "CentOS"
 rhel_epel_repo8: https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
 os_supported_centos: "centos"
