--- a/scheduler/roles/k8s_manager/vars/main.yml
+++ b/scheduler/roles/k8s_manager/vars/main.yml
@@ -1,4 +1,4 @@
-#  Copyright 2020 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -15,10 +15,10 @@
 
 helm_installer_file_directory: /root/bin
 
-helm_installer_file_directory_mode: 0755
+helm_installer_file_directory_mode: "0755"
 
 helm_installer_url: https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
 
 helm_installer_file_dest: /root/bin/get_helm.sh
 
-helm_installer_file_mode: 0700
+helm_installer_file_mode: "0700"
