--- a/scheduler/roles/k8s_start_services/tasks/check_k8s_pods.yml
+++ b/scheduler/roles/k8s_start_services/tasks/check_k8s_pods.yml
@@ -1,4 +1,4 @@
-#  Copyright 2021 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -25,7 +25,7 @@
     - hostvars['127.0.0.1']['k8s_cni'] == "calico"
   block:
     - name: Fetch host nic from ip
-      ansible.builtin.shell: ip a | grep {{ inventory_hostname }}
+      ansible.builtin.shell: set -o pipefail && ip a | grep {{ inventory_hostname }}
       changed_when: false
       register: fetch_nic
       failed_when: false
@@ -125,3 +125,4 @@
   register: docker_image_pull_result
   until: docker_image_pull_result is not failed
   retries: 5
+  changed_when: true
