--- a/scheduler/roles/k8s_start_workers/vars/main.yml
+++ b/scheduler/roles/k8s_start_workers/vars/main.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -14,4 +14,6 @@
 ---
 
 apiserver_bind_port: 6443
-kubeadm_join_fail_msg: "kubeadm join command failed failed in the compute node {{ inventory_hostname }}. Re-retry omnia.yml execution after performing kubeadm reset manually."
+kubeadm_join_fail_msg: >
+  "kubeadm join command failed failed in the compute node {{ inventory_hostname }}."
+  " Re-retry omnia.yml execution after performing kubeadm reset manually."
