--- a/scheduler/roles/nfs_server_setup/tasks/main.yml
+++ b/scheduler/roles/nfs_server_setup/tasks/main.yml
@@ -32,14 +32,14 @@
       ansible.builtin.service:
         name: firewalld
         state: started
-        enabled: yes
+        enabled: true
       tags: firewalld
 
     - name: Start and enable rpcbind and nfs-server service
       ansible.builtin.service:
         name: "{{ item }}"
         state: restarted
-        enabled: yes
+        enabled: true
       with_items:
         - rpcbind
         - nfs-server
@@ -90,5 +90,5 @@
       ansible.builtin.service:
         name: firewalld
         state: stopped
-        enabled: no
+        enabled: false
       tags: firewalld
