--- a/scheduler/roles/slurm_common/tasks/main.yml
+++ b/scheduler/roles/slurm_common/tasks/main.yml
@@ -26,7 +26,7 @@
         dest: "{{ hostname_dest }}"
         regexp: localhost.localdomain
         replace: "{{ host_name.stdout }}"
-        backup: yes
+        backup: true
         mode: "{{ common_mode }}"
 
     - name: Enable powertools repo in Rocky 8
@@ -35,6 +35,7 @@
         - ( ansible_distribution | lower == os_centos ) or
           ( ansible_distribution | lower == os_rocky )
         - ( ansible_distribution_version >= os_version )
+      changed_when: true
 
     - name: Add python dependent packages for CentOS 7.9
       ansible.builtin.package:
@@ -181,7 +182,7 @@
         owner: slurm
         group: slurm
         mode: "{{ gen_mode }}"
-        recurse: yes
+        recurse: true
       tags: install
 
     - name: Give slurm user permission to spool
@@ -191,7 +192,7 @@
         group: slurm
         state: directory
         mode: "{{ gen_mode }}"
-        recurse: yes
+        recurse: true
 
     - name: Give slurm user permission to spool directory
       ansible.builtin.file:
@@ -200,7 +201,7 @@
         group: slurm
         state: directory
         mode: "{{ common_mode }}"
-        recurse: yes
+        recurse: true
 
     - name: Create slurm pid directory
       ansible.builtin.file:
@@ -209,7 +210,7 @@
         owner: slurm
         group: slurm
         mode: "{{ gen_mode }}"
-        recurse: yes
+        recurse: true
       tags: install
 
     - name: Give slurm user permission to slurmctld
@@ -232,17 +233,17 @@
       ansible.builtin.systemd:
         name: munge
         state: restarted
-        enabled: yes
+        enabled: true
       tags: install
       failed_when: false
 
     - name: Install lua and lmod for leap  OS
+      when: os_supported_leap in compute_os
       block:
         - name: Install packages for lua_lmod
           ansible.builtin.package:
             name: "{{ lmod_packages }}"
             state: present
-      when: os_supported_leap in compute_os
 
     - name: Initialize grafana_status
       ansible.builtin.set_fact:
@@ -258,7 +259,7 @@
 
     - name: Check for grafana_username and password
       ansible.builtin.set_fact:
-          grafana_cred_status: true
+        grafana_cred_status: true
       when:
         - grafana_username is defined
         - grafana_password is defined
