--- a/scheduler/roles/slurm_exporter/tasks/configure_grafana.yml
+++ b/scheduler/roles/slurm_exporter/tasks/configure_grafana.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -16,7 +16,8 @@
 - name: Include k8s_start_services variables
   ansible.builtin.include_vars: ../../k8s_start_services/vars/main.yml
 
-- block:
+- name: Task for configure grafana
+  block:
     - name: Create prometheus datasource in grafana
       community.grafana.grafana_datasource:
         name: "hpc-prometheus-{{ ansible_default_ipv4.address }}"
@@ -56,7 +57,8 @@
     replace: '"title": "SLURM - CPUs/GPUs, Nodes, Jobs, Scheduler ({{ ansible_default_ipv4.address }})",'
   delegate_to: localhost
 
-- block:
+- name: Tasks for Grafana
+  block:
     - name: Import Slurm Grafana dashboards
       community.grafana.grafana_dashboard:
         grafana_url: "http://{{ grafana_svc_ip }}:{{ grafana_svc_port }}"
@@ -64,7 +66,7 @@
         grafana_password: "{{ hostvars['127.0.0.1']['grafana_password'] }}"
         state: present
         commit_message: Updated by ansible
-        overwrite: yes
+        overwrite: true
         path: "{{ role_path }}/files/{{ item }}"
       with_items: "{{ slurm_dashboard_json_files }}"
       delegate_to: localhost
