--- a/scheduler/roles/slurm_restd/tasks/generate_token.yml
+++ b/scheduler/roles/slurm_restd/tasks/generate_token.yml
@@ -1,4 +1,4 @@
-# Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -14,72 +14,72 @@
 ---
 
 - name: Generate key
-  command: dd if=/dev/random of="{{ token_dir }}" bs=32 count=1
+  ansible.builtin.command: dd if=/dev/random of="{{ token_dir }}" bs=32 count=1
   changed_when: false
 
 - name: Copy the key to /etc/slurm
-  copy:
+  ansible.builtin.copy:
     src: "{{ token_dir }}"
     dest: "{{ slurm_dir }}"
     owner: slurm
     group: slurm
     mode: "{{ token_mode }}"
-    remote_src: yes
+    remote_src: true
 
 - name: Add authentication alt type entry in slurm.conf
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "{{ slurm_conf_path }}"
     insertafter: 'AuthType=auth/munge\n'
     line: 'AuthAltTypes=auth/jwt'
 
 - name: Add auth alt parameter entry in slurm.conf
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "{{ slurm_conf_path }}"
     insertafter: 'AuthAltTypes=auth/jwt\n'
     line: 'AuthAltParameters=jwt_key=/etc/slurm/jwt_hs256.key'
 
 - name: Restart slurmctld
-  systemd:
+  ansible.builtin.systemd:
     name: slurmctld
     state: restarted
-    daemon_reload: yes
-    enabled: yes
+    daemon_reload: true
+    enabled: true
 
 - name: Create systemd unit file
-  copy:
+  ansible.builtin.copy:
     src: "{{ role_path }}/files/slurm-restd-custom.service"
     dest: "{{ systemd_path_dest }}"
-    remote_src: no
+    remote_src: false
     mode: "{{ fil_mode }}"
 
 - name: Fetch hostname
-  command: hostname
+  ansible.builtin.command: hostname
   register: current_hostname
   changed_when: false
 
 - name: Set fact for server hostname
-  set_fact:
+  ansible.builtin.set_fact:
     manager_hostname: "{{ current_hostname.stdout }}"
 
 - name: Update the port in service file
-  replace:
+  ansible.builtin.replace:
     path: "{{ systemd_path_dest }}/slurm-restd-custom.service"
     regexp: "0.0.0.0:6820"
     replace: "{{ manager_hostname }}:{{ slurm_restd_port }}"
 
 - name: Update ExecStart paramter in case of CentOS 7.9
-  replace:
+  ansible.builtin.replace:
     path: "{{ systemd_path_dest }}/slurm-restd-custom.service"
     regexp: "slurmrestd"
     replace: "/usr/sbin/slurmrestd"
   when: os_supported_centos in compute_os
 
 - name: Add random token
-  shell: set -o pipefail && export SLURM_JWT=nvisjvopaekgvgoawkgvpao84r93fjmdkvmdkvm
+  ansible.builtin.shell: set -o pipefail && export SLURM_JWT=nvisjvopaekgvgoawkgvpao84r93fjmdkvmdkvm
   changed_when: false
 
 - name: Start services
-  systemd:
+  ansible.builtin.systemd:
     name: slurm-restd-custom.service
     state: restarted
-    enabled: yes
+    enabled: true
