--- a/scheduler/roles/slurm_restd/tasks/main.yml
+++ b/scheduler/roles/slurm_restd/tasks/main.yml
@@ -17,14 +17,14 @@
   when: hostvars['127.0.0.1']['slurm_support']
   block:
     - name: Install jansson
-      include_tasks: install_jansson.yml
+      ansible.builtin.include_tasks: install_jansson.yml
 
     - name: Install libjwt
-      include_tasks: install_libjwt.yml
+      ansible.builtin.include_tasks: install_libjwt.yml
 
     - name: Configure slurm restd in leap
-      include_tasks: configure_restd_leap.yml
+      ansible.builtin.include_tasks: configure_restd_leap.yml
       when: os_supported_leap in compute_os
 
     - name: Generate Token
-      include_tasks: generate_token.yml
+      ansible.builtin.include_tasks: generate_token.yml
