--- a/scheduler/roles/slurm_start_services/tasks/main.yml
+++ b/scheduler/roles/slurm_start_services/tasks/main.yml
@@ -17,63 +17,66 @@
   when: hostvars['127.0.0.1']['slurm_support']
   block:
     - name: Include common variables
-      include_vars: ../../slurm_manager/vars/main.yml
+      ansible.builtin.include_vars: ../../slurm_manager/vars/main.yml
 
     - name: Include common variables
-      include_vars: ../../slurm_common/vars/main.yml
+      ansible.builtin.include_vars: ../../slurm_common/vars/main.yml
 
     - name: Copy slurm conf from buffer
-      copy:
+      ansible.builtin.copy:
         src: "{{ buffer_path }}"
         dest: "{{ slurm_confpth }}"
         mode: "{{ slurm_mode }}"
 
     - name: Enable slurmdbd on manager
-      systemd:
+      ansible.builtin.systemd:
         name: slurmdbd
         state: restarted
-        enabled: yes
+        enabled: true
       tags: install
 
     - name: Start slurmctld on manager
-      systemd:
+      ansible.builtin.systemd:
         name: slurmctld
         state: restarted
-        enabled: yes
+        enabled: true
       tags: install
 
-    - name: check slurmdbd is active
-      systemd:
+    - name: Check slurmdbd is active
+      ansible.builtin.systemd:
         name: slurmdbd
       register: slurmdbd_status
       until: 'slurmdbd_status.status.ActiveState=="active"'
       retries: "{{ max_retries }}"
 
     - name: Show cluster if exists
-      command: sacctmgr -n show cluster {{ cluster_name }}
+      ansible.builtin.command: sacctmgr -n show cluster {{ cluster_name }}
       register: slurm_clusterlist
       changed_when: false
       until: slurm_clusterlist is not failed
       retries: "{{ max_retries }}"
 
     - name: Create slurm cluster
-      command: sacctmgr -i add cluster {{ cluster_name }}
+      ansible.builtin.command: sacctmgr -i add cluster {{ cluster_name }}
       when: not slurm_clusterlist.stdout
+      changed_when: true
 
     - name: Show account
-      command: sacctmgr show account -s
+      ansible.builtin.command: sacctmgr show account -s
       register: account_added
       changed_when: false
 
     - name: Create default slurm group
-      command: sacctmgr -i add account defaultgroup Cluster={{ cluster_name }} Description="Default Account" Organization="Default Org"
+      ansible.builtin.command: sacctmgr -i add account defaultgroup Cluster={{ cluster_name }} Description="Default Account" Organization="Default Org"
       when: account_added.rc != 0
+      changed_when: true
 
     - name: Check if user exists
-      command: sacctmgr show user -s
+      ansible.builtin.command: sacctmgr show user -s
       register: user_added
       changed_when: false
 
     - name: Add root to the default account
-      command: sacctmgr -i add user root DefaultAccount=defaultgroup
+      ansible.builtin.command: sacctmgr -i add user root DefaultAccount=defaultgroup
       when: user_added.rc != 0
+      changed_when: true
