--- a/scheduler/roles/slurm_workers/tasks/main.yml
+++ b/scheduler/roles/slurm_workers/tasks/main.yml
@@ -17,10 +17,10 @@
   when: hostvars['127.0.0.1']['slurm_support']
   block:
     - name: Include common variables
-      include_vars: ../../slurm_manager/vars/main.yml
+      ansible.builtin.include_vars: ../../slurm_manager/vars/main.yml
 
     - name: Give slurm user permission to slurmd spool
-      file:
+      ansible.builtin.file:
         path: "{{ spool_slurmd_pth }}"
         owner: slurm
         group: slurm
@@ -28,7 +28,7 @@
         state: touch
 
     - name: Create log files on compute nodes
-      file:
+      ansible.builtin.file:
         path: "{{ slurm_logpth }}"
         owner: slurm
         group: slurm
@@ -38,20 +38,20 @@
         - slurmd.log
 
     - name: Install firewalld
-      package:
+      ansible.builtin.package:
         name: firewalld
         state: present
       tags: firewalld
 
     - name: Start and enable firewalld
-      service:
+      ansible.builtin.service:
         name: firewalld
         state: started
-        enabled: yes
+        enabled: true
       tags: firewalld
 
     - name: Firewall rule for slurm - tcp/udp ports
-      command: "firewall-cmd --zone=public --permanent --add-port={{ item }}"
+      ansible.builtin.command: "firewall-cmd --zone=public --permanent --add-port={{ item }}"
       changed_when: true
       with_items:
         - "{{ tcp_port2 }}"
@@ -59,32 +59,32 @@
       tags: firewalld
 
     - name: Reload firewalld
-      command: firewall-cmd --reload
+      ansible.builtin.command: firewall-cmd --reload
       changed_when: true
       tags: firewalld
 
     - name: Stop and disable firewalld
-      service:
+      ansible.builtin.service:
         name: firewalld
         state: stopped
-        enabled: no
+        enabled: false
       tags: firewalld
 
     - name: Copy slurm conf from buffer
-      copy:
+      ansible.builtin.copy:
         src: "{{ buffer_path }}"
         dest: "{{ slurm_confpth }}"
         mode: "{{ slurm_mode }}"
 
     - name: Install packages for slurm
-      package:
+      ansible.builtin.package:
         name: "{{ slurm_packages }}"
         state: present
       tags: install
       when: os_supported_leap not in compute_os
 
     - name: Install development tools
-      package:
+      ansible.builtin.package:
         name: "{{ dev_tools }}"
         state: present
       tags: install
@@ -93,48 +93,48 @@
         - os_supported_redhat not in compute_os
 
     - name: Install development tools
-      package:
+      ansible.builtin.package:
         name: "{{ rhel_dev_tools }}"
         state: present
       tags: install
       when: os_supported_redhat in compute_os
 
     - name: Get the hostname
-      command: hostname
+      ansible.builtin.command: hostname
       register: machine_name
       changed_when: true
 
     - name: Set compute node hostname/host ip to add in manager hosts file
-      set_fact:
+      ansible.builtin.set_fact:
         compute_host: "{{ inventory_hostname }}"
         compute_ip: "{{ machine_name.stdout }}"
 
     - name: Get socket and core info from compute nodes
-      set_fact:
+      ansible.builtin.set_fact:
         node_name: "{{ machine_name.stdout }}"
         sockets: "{{ hostvars[inventory_hostname]['ansible_facts']['processor_count'] }}"
         cores: "{{ hostvars[inventory_hostname]['ansible_facts']['processor_cores'] }}"
 
     - name: Add compute nodes core & socket info in slurm config file
-      lineinfile:
+      ansible.builtin.lineinfile:
         dest: "{{ slurm_confpth }}"
         line: "NodeName={{ hostvars[item].node_name }} Sockets={{ hostvars[item].sockets }} CoresPerSocket={{ hostvars[item].cores }}"
         state: present
-        create: yes
+        create: true
         mode: "{{ slurm_mode }}"
       with_items:
         - "{{ groups['compute'] }}"
       when: '"compute" in group_names'
       delegate_to: "{{ item }}"
-      with_items:
+      loop:
         - "{{ play_hosts }}"
 
     - name: Add login node core & socket info in slurm config file
-      lineinfile:
+      ansible.builtin.lineinfile:
         dest: "{{ slurm_confpth }}"
         line: "NodeName={{ hostvars[item].node_name }} Sockets={{ hostvars[item].sockets }} CoresPerSocket={{ hostvars[item].cores }}"
         state: present
-        create: yes
+        create: true
         mode: "{{ slurm_mode }}"
       with_items:
         - "{{ groups['login'] }}"
@@ -142,11 +142,11 @@
         - hostvars["127.0.0.1"]["login_node_required"]
         - '"login" in group_names'
       delegate_to: "{{ item }}"
-      with_items:
+      loop:
         - "{{ play_hosts }}"
 
     - name: Update hostnames of compute node when ALL in partition nodes
-      replace:
+      ansible.builtin.replace:
         path: "{{ slurm_confpth }}"
         regexp: 'PartitionName=normal Nodes=ALL'
         replace: 'PartitionName=normal Nodes={{ machine_name.stdout }}'
@@ -156,7 +156,7 @@
       register: output
 
     - name: Update hostnames of compute node in partition nodes
-      replace:
+      ansible.builtin.replace:
         path: "{{ slurm_confpth }}"
         regexp: ' Default=YES MaxTime=INFINITE State=UP'
         replace: ',{{ machine_name.stdout }} Default=YES MaxTime=INFINITE State=UP'
@@ -166,7 +166,7 @@
         - output.msg | length == 0
 
     - name: Save slurm conf in buffer
-      fetch:
+      ansible.builtin.fetch:
         src: "{{ slurm_confpth }}"
         dest: "{{ buffer_path }}"
         flat: true
