--- a/scheduler/roles/slurm_workers_service/tasks/main.yml
+++ b/scheduler/roles/slurm_workers_service/tasks/main.yml
@@ -17,23 +17,23 @@
   when: hostvars['127.0.0.1']['slurm_support']
   block:
     - name: Include common variables
-      include_vars: ../../slurm_manager/vars/main.yml
+      ansible.builtin.include_vars: ../../slurm_manager/vars/main.yml
 
     - name: Copy slurm conf from buffer
-      copy:
+      ansible.builtin.copy:
         src: "{{ buffer_path }}"
         dest: "{{ slurm_confpth }}"
         mode: "{{ slurm_mode }}"
 
     - name: Save slurm conf in buffer
-      fetch:
+      ansible.builtin.fetch:
         src: "{{ slurm_confpth }}"
         dest: "{{ buffer_path }}"
         flat: true
 
     - name: Start slurmd on compute nodes
-      systemd:
+      ansible.builtin.systemd:
         name: slurmd.service
         state: started
-        enabled: yes
+        enabled: true
       tags: install
